[gd_scene load_steps=3 format=3 uid="uid://b814betooccem"]

[ext_resource type="Script" uid="uid://cbqq0q2dyx4pf" path="res://scripts/UI/BuildingUI.gd" id="1_381lv"]
[ext_resource type="Texture2D" uid="uid://luibggplp2ss" path="res://images/cityIcon.png" id="2_pud5p"]

[node name="BuildingUI" type="Panel"]
custom_minimum_size = Vector2(0, 96)
size_flags_horizontal = 3
script = ExtResource("1_381lv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_pud5p")
stretch_mode = 5

[node name="BuildingType" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Default industry"

[node name="Lvl" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Lvl 2999"

[node name="Tier" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Tier 1"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Lvl Up Button" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Expand Industry"

[node name="UpgradeTier" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrade Tier"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Lvl Up Button" to="." method="_on_lvl_up_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/UpgradeTier" to="." method="_on_upgrade_tier_pressed"]
